--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "SMExpress/Bundle",
+    "name": "smexpress/smexpressbundle",
     "description": "Service d'information horaires de bus en Seine et Marne",
     "license": "MIT",
     "authors": [
